<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_main_scene"
    tools:context=".MainActivity">

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/userProfilePicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/back"
        android:cropToPadding="true"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:roundPercent="0.0"
        app:srcCompat="@drawable/sakura_flowers_bloom" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/medium_margin"
        android:fontFamily="@font/droid_sans"
        android:text="@string/user_name"
        android:textColor="@color/black"
        android:textSize="@dimen/large_font_size"
        app:layout_constraintBottom_toTopOf="@+id/userStatus"
        app:layout_constraintStart_toStartOf="@+id/userStatus" />

    <TextView
        android:id="@+id/userStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/droid_sans"
        android:text="@string/user_state"
        android:textColor="@color/flat_black"
        app:layout_constraintBottom_toBottomOf="@+id/userProfilePicture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/changeProfilePictureFAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:contentDescription="@string/change_profile_image"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="@+id/userProfilePicture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userProfilePicture"
        app:srcCompat="@drawable/add_photo" />

    <ScrollView
        android:id="@+id/container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userProfilePicture">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/flat_gray"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/medium_margin"
                android:background="@color/white"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/medium_margin"
                    android:layout_marginTop="@dimen/medium_margin"
                    android:layout_marginBottom="@dimen/medium_margin"
                    android:text="@string/settings_account"
                    android:textColor="@color/flat_dark_blue" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/medium_margin"
                    android:layout_marginBottom="@dimen/medium_margin"
                    android:text="@string/account_phone_number"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/medium_margin"
                    android:layout_marginBottom="@dimen/medium_margin"
                    android:text="@string/settings_change_phone_number"
                    android:textColor="@color/flat_black" />

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/medium_margin" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/medium_margin"
                    android:layout_marginTop="@dimen/medium_margin"
                    android:layout_marginBottom="@dimen/medium_margin"
                    android:text="@string/account_username"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/medium_margin"
                    android:layout_marginBottom="@dimen/medium_margin"
                    android:text="@string/settings_username"
                    android:textColor="@color/flat_black" />

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/medium_margin" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/medium_margin"
                    android:layout_marginTop="@dimen/medium_margin"
                    android:layout_marginBottom="@dimen/medium_margin"
                    android:text="@string/account_bio"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/medium_margin"
                    android:layout_marginBottom="@dimen/medium_margin"
                    android:text="@string/settings_bio"
                    android:textColor="@color/flat_black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/medium_margin"
                android:background="@color/white"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/medium_margin"
                    android:layout_marginTop="@dimen/medium_margin"
                    android:layout_marginBottom="@dimen/medium_margin"
                    android:text="@string/settings_phone_number_auth"
                    android:textColor="@color/flat_dark_blue" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/medium_margin"
                    android:layout_marginBottom="@dimen/medium_margin"
                    android:text="@string/settings_auth_message"
                    android:textColor="@color/flat_black" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/medium_margin"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/medium_margin"
                        android:layout_marginEnd="@dimen/medium_margin"
                        android:layout_weight="1"
                        android:backgroundTint="@color/flat_dark_blue"
                        android:text="@string/yes" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/medium_margin"
                        android:layout_weight="1"
                        android:backgroundTint="@color/flat_dark_blue"
                        android:text="@string/no" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/medium_margin"
                android:background="@color/white"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/medium_margin"
                    android:layout_marginTop="@dimen/medium_margin"
                    android:layout_marginBottom="@dimen/medium_margin"
                    android:text="@string/settings"
                    android:textColor="@color/flat_dark_blue" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/medium_margin"
                    android:layout_marginBottom="@dimen/medium_margin"
                    android:drawablePadding="@dimen/medium_margin"
                    android:text="@string/settings_chat_settings"
                    android:textColor="@color/black"
                    app:drawableStartCompat="@drawable/chat"
                    app:drawableTint="@color/flat_blue" />

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="42dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/medium_margin"
                    android:layout_marginTop="@dimen/medium_margin"
                    android:layout_marginBottom="@dimen/medium_margin"
                    android:drawablePadding="@dimen/medium_margin"
                    android:text="@string/settings_privacy_and_security"
                    android:textColor="@color/black"
                    app:drawableStartCompat="@drawable/lock"
                    app:drawableTint="@color/flat_blue" />

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="42dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/medium_margin"
                    android:layout_marginTop="@dimen/medium_margin"
                    android:layout_marginBottom="@dimen/medium_margin"
                    android:drawablePadding="@dimen/medium_margin"
                    android:text="@string/settings_storage"
                    android:textColor="@color/black"
                    app:drawableStartCompat="@drawable/storage"
                    app:drawableTint="@color/flat_blue" />

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="42dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/medium_margin"
                    android:layout_marginTop="@dimen/medium_margin"
                    android:layout_marginBottom="@dimen/medium_margin"
                    android:drawablePadding="@dimen/medium_margin"
                    android:text="@string/settings_notifications"
                    android:textColor="@color/black"
                    app:drawableStartCompat="@drawable/notifications"
                    app:drawableTint="@color/flat_blue" />

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="42dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/medium_margin"
                    android:layout_marginTop="@dimen/medium_margin"
                    android:layout_marginBottom="@dimen/medium_margin"
                    android:drawablePadding="@dimen/medium_margin"
                    android:text="@string/settings_folder"
                    android:textColor="@color/black"
                    app:drawableStartCompat="@drawable/folder"
                    app:drawableTint="@color/flat_blue" />

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="42dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/medium_margin"
                    android:layout_marginTop="@dimen/medium_margin"
                    android:layout_marginBottom="@dimen/medium_margin"
                    android:drawablePadding="@dimen/medium_margin"
                    android:text="@string/settings_language"
                    android:textColor="@color/black"
                    app:drawableStartCompat="@drawable/language"
                    app:drawableTint="@color/flat_blue" />

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="42dp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="@dimen/image_button_width_height"
        android:layout_height="@dimen/image_button_width_height"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginTop="@dimen/medium_margin"
        android:background="#00FFFFFF"
        android:contentDescription="@string/back"
        app:layout_constraintBottom_toBottomOf="@+id/userProfilePicture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/arrow_back" />

    <ImageButton
        android:id="@+id/moreButton"
        android:layout_width="@dimen/image_button_width_height"
        android:layout_height="@dimen/image_button_width_height"
        android:layout_marginTop="@dimen/medium_margin"
        android:layout_marginEnd="@dimen/medium_margin"
        android:background="#00FFFFFF"
        android:contentDescription="@string/more"
        app:layout_constraintBottom_toBottomOf="@+id/userProfilePicture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/more_vert" />

    <ImageButton
        android:id="@+id/searchButton"
        android:layout_width="@dimen/image_button_width_height"
        android:layout_height="@dimen/image_button_width_height"
        android:layout_marginEnd="@dimen/medium_margin"
        android:background="#00FFFFFF"
        android:contentDescription="@string/search"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/moreButton"
        app:layout_constraintEnd_toStartOf="@+id/moreButton"
        app:layout_constraintTop_toTopOf="@+id/moreButton"
        app:srcCompat="@drawable/search" />

    <ImageButton
        android:id="@+id/qrcodeButton"
        android:layout_width="@dimen/image_button_width_height"
        android:layout_height="@dimen/image_button_width_height"
        android:layout_marginEnd="@dimen/medium_margin"
        android:background="#00FFFFFF"
        android:contentDescription="@string/qr_code"
        app:layout_constraintBottom_toBottomOf="@+id/searchButton"
        app:layout_constraintEnd_toStartOf="@+id/searchButton"
        app:layout_constraintTop_toTopOf="@+id/searchButton"
        app:srcCompat="@drawable/qr_code" />

</androidx.constraintlayout.motion.widget.MotionLayout>